# plottinglib

./: .gitignore  LICENSE  README.md  pyproject.toml
migration_examples/: __init__.py
migration_examples/matlab_parity/: README.md  __init__.py
migration_examples/matlab_parity/matlab/: exponential_smooth.m
migration_examples/matlab_parity/python/: __init__.py  processing.py
migration_examples/matlab_parity/scripts/: generate_golden.py
migration_examples/matlab_parity/tests/: conftest.py  matlab_helpers.py  test_golden_regression.py  test_matlab_parity.py  test_python_processing.py
migration_examples/matlab_parity/tests/data/golden/: exponential_smooth_case_001.npz
scripts/: check.py
