[project]
name = "plottinglib-workspace"
version = "0.1.0"
description = "Workspace for plotting-related libraries, apps, and tools."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.9.0",
  "ty>=0.0.1a20",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]
